style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');

html {
    -webkit-text-size-adjust: none;
    -moz-text-size-adjust: none;
    -ms-text-size-adjust: none;
    text-size-adjust: none;
}

body {
    margin: 0;
    padding: 0;
    background-color: black;
    font-size: 16px;
}

#canvas {
    width: 100%;
    height: 100%;
    overflow-y: hidden;
    overflow-x: hidden;
    background-color: #0A0908;
    filter: blur(3px);
    position: fixed;
}

.center {
    position: absolute;
    top: 0px;
    left: 50%;
    transform: translate(-50%, 0%);
}

.card {
    z-index: -1;
    width: 960px;
    height: 100%;
    color: #FFFAFA;
    border-radius: 4px;
    overflow: hidden;
    position: relative;
    font-family: 'Roboto', sans-serif;
    margin-bottom: 300px;
}

.card .card-title {
    position: relative;
    top: 20px;
    width: 100%;
    font-size: 80px;
    user-select: none;
}

.card .card-content {
    display: flex;
    color: black;
    background-color: #FFFAFA;
    margin: 20px;
    padding: 20px;
    border-radius: 5px;
}

.card .card-content .inline {
    display: inline-block;
}

.card .card-navbar {
    display: flex;
    justify-content: right;
}

.card .card-navbar .navbar-item {
    position: relative;
    top: 10px;
    display: inline-block;
    margin-left: 10px;
    margin-right: 10px;
    font-size: 40px;
    padding: 0px!important;
}

.card .card-navbar .selected a {
    text-decoration: underline!important;
}

.card .card-navbar .navbar-item a {
    color: #FFFAFA!important;
}

.card .infobox {
    width: 600px;
    height: 260px;
    margin: auto;
}

.round-image {
    border-radius: 50%;
    width: 200px;
    height: 200px;
    margin: 20px;
}

#timeline {
    background-color: #0000005b;
    overflow-x: hidden;
    width: 100vw;
    white-space: nowrap;
    position: fixed;
    bottom:  0px;
    left: 50%;
    transform: translate(-50%, 0px);
}

.index-item {
    color: black;
    background-color: #FFFAFA;
    margin: 20px;
    padding: 20px;
    border-radius: 5px;
}

.blog-item {
    color: black;
    background-color: #FFFAFA;
    /*max-height: 80px;*/
    height: 80px;
    margin: 20px;
    padding: 20px;
    border-radius: 5px;
    overflow: hidden;
}

.blog-item .underline {
    text-decoration: underline;
}

.blog-item .italic {
    font-style: italic;
}

.blog-item .bold {
    text-shadow: 0.5px 0.5px 0.5px #000000;
}

.blog-item .code {
    padding: 10px;
    border-radius: 5px;
    background-color: #d4d4d4;
    font-family: 'Roboto Mono', monospace;
}

.blog-item.expanded {
    overflow-y: scroll;
    height: auto;
    /*max-height: 90vh!important;*/
}

.blog-item.hoverable:hover {
    cursor: pointer!important;
    border-left: 5px solid #0a0908!important;
    border-right: 5px solid #0a0908!important;
    background-color: #fffafad7!important;
}

.index-item:hover {
    cursor: pointer;
    border-left: 5px solid #0a0908!important;
    border-right: 5px solid #0a0908!important;
    background-color: #fffafad7;
}

.index-item-hover {
    cursor: pointer;
    border-left: 5px solid #0a0908!important;
    border-right: 5px solid #0a0908!important;
    background-color: #fffafad7;
}

.index-item-title-and-date {
    display: flex;
    justify-content: space-between;
}

.index-item-title {
    font-size: 23px;
}

.card a {
    color: black;
    text-decoration: none;
}

.card a:hover {
    text-decoration: underline;
}

.social {
    position: relative;
    margin-left: 15px;
    top: -25px;
}

.social-bottom {
    position: relative;
    margin-left: 15px;
    top: -50px;
}

.social:hover {
    cursor: pointer;
}

.index-item-tags {
    margin-top: 10px;
    display: flex;
    flex-wrap: wrap;
}

.index-item-tag {
    background-color: #000000;
    color: #FFFAFA;
    font-size: 12px;
    padding-top: 2px;
    padding-bottom: 2px;
    padding-left: 5px;
    padding-right: 5px;
    margin-right: 5px; 
    border-radius: 5px;
}

@media print {
    #canvas, #canvas * {
        visibility: hidden;
    }

    #timeline, #timeline * {
        visibility: hidden;
    }

    .index-item {
        margin-left: 50px;
        width: 800px;
    }

    .social {
        height: 15px!important;
    }
}

.pdf-button {
    display: flex;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
    padding: 10px;
    background-color: #FFFAFA;
    color: black;
    border: none;
    border-radius: 5px;
    cursor: pointer;
    font-size: 1rem;
    transition: background-color 0.3s ease, border 0.3s ease;
    font-family: 'Roboto', sans-serif;
}

.pdf-button svg {
    margin-right: 12px;
    width: 24px;
    height: 24px;
}

.pdf-button:hover {
    background-color: #000000;
    color: #FFFAFA;
}

.bluesky {
    background-image: url('bluesky-1.svg');
    width: 1em;
    height: 1em;
    display: inline-block;
    color: #000000;
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    vertical-align: middle; 
}

